--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "author": "",
   "license": "ISC",
   "gypfile": true,
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "nan": "^2.14.2"
-  }
+  },
+  "devDependencies": {}
 }
