Moved nan to dependencies because I don't know the difference apparently

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "author": "scoutchorton",
   "license": "ISC",
   "gypfile": true,
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "nan": "^2.14.2"
-  }
+  },
+  "devDependencies": {}
 }
